Get rid of cross version support